prevent tweet text from overflowing its container

--- a/css/application.css
+++ b/css/application.css
@@ -62,6 +62,7 @@ a {
 
 .item .text {
   color: #111111;
+  overflow: hidden;
 }
 
 .item .details {
